infrastructure/authelia/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authelia
  namespace: authelia
  annotations:
    glance/name: Authelia
    glance/icon: di:authelia
    glance/url: https://auth.${DOMAIN}
spec:
  ingressClassName: traefik
  rules:
    - host: auth.${DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authelia
                port:
                  name: http
